# template_cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  proj.code-workspace  workspace.code-workspace
configured/: CMakeLists.txt
include/: UniformBuffer.hpp  WrapperBuffer.hpp
src/: CMakeLists.txt  main.cpp  main_mem_raw.cpp  main_smart.cpp
toolchain/: clang.cmake
